Fix alignment of lock status icon at small screens

--- a/client/components/domains/transfer-domain-step/style.scss
+++ b/client/components/domains/transfer-domain-step/style.scss
@@ -156,6 +156,7 @@
 
 .transfer-domain-step__lock-status {
 	font-size: 12px;
+	flex-shrink: 0;
 
 	svg {
 		padding-right: 4px;
